# NormaWM

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SYSTEM_PROMPT.md  book.toml  flake.nix
docs/: SUMMARY.md  ai-integration.md  architecture.md  cli.md  control-plane.md  development.md  getting-started.md  introduction.md  non-linux-setup.md  qemu-vm.md  roadmap.md  text-input.md  user-guide.md  window-management.md
src/: ai.rs  atspi.rs  compositor.rs  control.rs  error.rs  lib.rs  main.rs  monitor.rs  runtime.rs  wm.rs
tests/: ai_window_input.rs
