[package]
name = "normawm"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1"
description = "NormaWM is a Smithay-based nested Wayland compositor with an AI-ready control plane."
publish = false

[dependencies]
raw-window-handle = "0.6.2"
softbuffer = "0.4.8"
smithay = { version = "0.7.0", default-features = false, features = ["backend_winit", "renderer_gl", "wayland_frontend"] }
thiserror = "2.0.12"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wayland-protocols = { version = "0.32.8", features = ["server"] }
wayland-server = "0.31.9"
winit = { version = "0.30.0", default-features = false, features = ["wayland", "wayland-dlopen", "x11", "rwh_06"] }
